# aar-vlm

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
aargrad/: __init__.py  nn.py  optim.py
bench/: bench_matmul.cu
bench/baselines/: matmul_a100_80gb.csv  v1_a100_80gb.csv  v1_a100_80gb.md  v2_a100_80gb.md  v3_a100_80gb.md  v4_a100_80gb.md
cppsrc/autograd/: backward.cpp
cppsrc/core/: allocator.hpp  cuda_allocator.cpp  cuda_allocator.hpp  cuda_check.hpp  cuda_copy.cu  cuda_copy.hpp  cuda_copy_stub.cpp  rng.hpp  storage.cpp  tensor.cpp  tensor.hpp  types.hpp
cppsrc/ops/: adamw.cpp  adamw.cu  adamw.hpp  adamw_cuda_stub.cpp  attention.cpp  attention.cu  attention.hpp  attention_cuda_stub.cpp  bmm.cpp  bmm.cu  bmm.hpp  bmm_cuda_stub.cpp  cross_entropy.cpp  cross_entropy.cu  cross_entropy.hpp  cross_entropy_cuda_stub.cpp  dropout.cpp  dropout.cu  dropout.hpp  dropout_cuda_stub.cpp  elementwise.cpp  elementwise.cu  elementwise.hpp  elementwise_cuda_stub.cpp  embedding.cpp  embedding.cu  embedding.hpp  embedding_cuda_stub.cpp  flash_attention.cpp  flash_attention.cu  flash_attention.hpp  flash_attention_cuda_stub.cpp  layernorm.cpp  matmul.cpp  matmul.cu  matmul.hpp  matmul_cuda_stub.cpp  shape.cpp  shape.cu  shape.hpp  (+2 more)
cppsrc/python/: binding.cpp
python/shakespeare/data/: ckpt_final.json  ckpt_final.npz
python/shakespeare/scripts/: data.py  inference.py  model.py  prepare.py  train.py
src/autograd/: backward.cpp  backward.hpp  function.cpp  function.hpp
src/core/: cpu_allocator.cpp  cpu_allocator.hpp  cuda_allocator_stub.cpp  cuda_check.hpp  cuda_copy.cu  cuda_copy.hpp  cuda_copy_stub.cpp  storage.hpp  tensor.cpp  tensor.hpp
src/ops/: elementwise.cpp  elementwise.cu  elementwise.hpp  elementwise_cuda_stub.cpp  layernorm.cpp  layernorm.cu  layernorm.hpp  layernorm_cuda_stub.cpp  matmul.cpp  matmul.cu  matmul.hpp  matmul_cuda_stub.cpp  softmax.cpp  softmax.cu  softmax.hpp  softmax_cuda_stub.cpp
tests/: test_autograd.cpp  test_autograd_ops.cpp  test_elementwise.cpp  test_layernorm.cpp  test_matmul.cpp  test_tensor.cpp
tests/cpp/: test_autograd.cpp  test_softmax.cpp  test_tensor.cpp
tests/python/: test_adamw.py  test_attention.py  test_bmm.py  test_cross_entropy.py  test_dropout.py  test_embedding.py  test_ffn.py  test_flash_attention.py  test_mha.py  test_nn.py  test_shape.py  test_smoke.py  test_train_mlp.py
vlm/: __init__.py
