[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "vlm"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8", "ninja>=1.11"]

[tool.scikit-build]
wheel.packages = ["aargrad", "python/vlm"]
cmake.version = ">=3.24"
build-dir = "build/{wheel_tag}"
editable.rebuild = true

[tool.scikit-build.cmake.define]
BUILD_TESTS = "OFF"
BUILD_PYTHON = "ON"
